update chart title

--- a/server/template/template.html
+++ b/server/template/template.html
@@ -129,7 +129,7 @@
                 <ng-include src="'views/profile-table.html'" class="col-xs-7"></ng-include>
             </div>
             <div class="top30">
-                <p class="center-align">干血纸片法采样反式脂肪酸简介</p>
+                <p class="center-align">干血纸片采样法脂肪酸简介</p>
                 <table class="o-table page-3">
                     <thead>
                     <tr class="border-both">
