--- a/server/template/views/header-1.html
+++ b/server/template/views/header-1.html
@@ -1,5 +1,8 @@
 <div class="header-blue">
-    <img src="resources/image/logo.png" height="25">
+	<div>
+	    <img class="logo" src="resources/image/logo.png" height="25">
+	    <p class="logo logo-text">脂 谱 生 物</p>
+    </div>
     <img src="resources/image/index-bar-green-to-red.png" height="0">
     <img src="resources/image/index-bar-red-to-green.png" height="0">
 </div>
