--- a/server/template/views/omega-3-chart.html
+++ b/server/template/views/omega-3-chart.html
@@ -1,5 +1,5 @@
 <div class="index-pointer" ng-style="omega_3_index_position_style">
-    <div class="label">你的指标</div>
+    <div class="label">您的指标</div>
     <div class="arrow-down"></div>
 </div>
 
